finished CRUD functionality
